[package]
name = "toml_config_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"

[dependencies.syn]
version = "2.0.72"

[dependencies.proc-macro2]
version = "1.0.86"

[dependencies.serde]
version = "1.0"
features = ["derive"]

