[package]
name = "toml_config_derive"
version = "0.1.4"
edition = "2021"
description = "Rust macro to turn a Rust struct into a TOML config."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/toml_config_derive"
repository = "https://github.com/simp4t7/toml_config"
readme = "../../README.md"

[readme]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.38"

[dependencies.syn]
version = "2.0.98"

[dependencies.proc-macro2]
version = "1.0.93"

[dependencies.serde]
version = "1.0"
features = ["derive"]

