[package]
name = "toml_config_trait"
version = "0.1.0"
edition = "2021"

[features]
config_map = ["dep:k8s-openapi", "dep:kube"]

[dependencies]
toml = "0.8.10"
anyhow = "1.0.80"

[dependencies.toml_config_derive]
path = "../toml_config_derive"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.k8s-openapi]
version = "0.21.1"
features = ["v1_26"]
optional = true

[dependencies.kube]
version = "0.88.1"
optional = true
