[package]
name = "toml_config_trait"
version = "0.1.1"
edition = "2021"
description = "Rust trait to turn a Rust struct into a TOML config."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/toml_config_trait"
repository = "https://github.com/simp4t7/toml_config"

[features]
config_map = ["dep:k8s-openapi", "dep:kube"]

[dependencies]
toml = "0.8.20"
anyhow = "1.0.95"

[dependencies.toml_config_derive]
version = "0.1.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.k8s-openapi]
version = "0.24.0"
features = ["v1_32"]
optional = true

[dependencies.kube]
version = "0.98.0"
optional = true
